# AlicePIDML

./: .gitignore  .pylintrc  README.md  default_config.json  load_python_env.sh  pyproject.toml  requirements.txt  run-jupyter-ssh.sh  shell.nix  test_config.json
.github/workflows/: pylint.yml
engines_test/: config.json  sweep_config.json
experiments/attention_cdan_hyperparameters_sweep/: config.json  sweep_config.json
experiments/attention_dann_hyperparameters_sweep/: config.json  sweep_config.json
experiments/attention_hyperparameters_sweep/: config.json  sweep_config.json
experiments/engines_test/: attention_config.json  attention_sweep_config.json  mlp_ensemble_config.json  mlp_ensemble_sweep_config.json
experiments/mlp_hyperparameters_sweep/: config.json  sweep_config.json
models/Delete/: antikaon.pt  antipion.pt  antiproton.pt  kaon.pt  pion.pt  proton.pt
models/Ensemble/: antikaon.pt  antipion.pt  antiproton.pt  kaon.pt  pion.pt  proton.pt
models/Mean/: antikaon.pt  antipion.pt  antiproton.pt  kaon.pt  pion.pt  proton.pt
models/Proposed/: antikaon.pt  antipion.pt  antiproton.pt  kaon.pt  pion.pt  proton.pt
notebooks/: compare_models.ipynb  dann-t-sne-visualisation.ipynb  data_exploration.ipynb  exploration_balanced_csv_data.ipynb  export_onnx.ipynb  feature_importance.ipynb  misclassification_analysis.ipynb  plot_comparison.ipynb  prepare_data.ipynb  profiling.ipynb  sweep.ipynb  test.ipynb  train.ipynb
scripts/: sweep.py  sweep_all_particles.py  sweep_one_particle.py  train.py  train_all_particles.py  train_one_particle.py  utils.py
(+78 files in other folders)
